add js preloader

--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -26,4 +26,9 @@ html
     <![endif]-->
 
   body
+    .preloader
+      .preloader__main
+        .preloader__spiner
+        span.preloader__value(data-unit="%") 0
+
     block content
