--- a/source/style/_misc/adjustment.pcss
+++ b/source/style/_misc/adjustment.pcss
@@ -31,3 +31,83 @@ input {
 .clearfix:after {
   clear: both;
 }
+
+.preloader {
+  position: fixed;
+  z-index: 10000;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #00BFA5;
+  color: #fff;
+}
+
+.preloader__main {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  margin: auto;
+  text-align: center;
+}
+
+.preloader__spiner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-top: 2px solid;
+  border-radius: 50%;
+  -webkit-animation: spinner 2s infinite linear;
+  animation: spinner 2s infinite linear;
+}
+
+.preloader__spinner:before, .preloader__spinner:after {
+  content: '';
+  position: absolute;
+  border: inherit;
+  border-radius: 50%;
+  -webkit-animation: inherit;
+  animation: inherit;
+}
+
+.preloader__spinner:before {
+  top: -10px;
+  bottom: -10px;
+  left: -10px;
+  right: -10px;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+}
+
+.preloader__spinner:after {
+  top: 7px;
+  bottom: 7px;
+  left: 7px;
+  right: 7px;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+}
+
+.preloader__value {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.preloader__value:after {
+  content: attr(data-unit);
+}
+
+@keyframes spinner {
+  from {
+    -webkit-transform: rotate(0);
+    transform: rotate(0); }
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); }
+}
