edit js preloader

--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -29,6 +29,6 @@ html
     .preloader
       .preloader__main
         .preloader__spiner
-        span.preloader__value(data-unit="%") 0
+        span.preloader__value(data-unit="%")#preloader 0
 
     block content
