--- a/source/template/common/authorization.pug
+++ b/source/template/common/authorization.pug
@@ -1,4 +1,4 @@
-.authorization#auth_block
+.authorization.welcome__flipper--back#authBlock
     .authorization__main
         .title-medium.title-dashes Авторизуйтесь
 
@@ -24,5 +24,5 @@
             label(for="radio2") Не уверен
 
     .start__btns
-        a(href='#').start__btn.start__btn--auth#welcome_btn На главную
+        a(href='#').start__btn.start__btn--auth#welcomeBtn На главную
         a(href='#').start__btn.start__btn--auth Войти
