--- a/source/template/common/header.pug
+++ b/source/template/common/header.pug
@@ -6,8 +6,18 @@
             i(class="fa fa-github-alt" aria-hidden="true")
         a(href='#')
             i(class="fa fa-linkedin-square" aria-hidden="true")
-    .header__menu
-        include ../../icons/hamburger.svg
+    .nav.nav--main#navHeader
+        .nav__trigger#nav
+            .nav__trigger-line
+            .nav__trigger-line
+            .nav__trigger-line
+        .nav__drop#navOpen
+            .nav__list
+                .nav__item
+                    a(href="works.html").nav__link.title 1
+                    a(href="works.html").nav__link.title 2
+                    a(href="works.html").nav__link.title 3
+                    a(href="works.html").nav__link.title 4
 
 .header__main
     .header__title
