--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -1,7 +1,8 @@
 extends ../_template
 
 block variables
-    - var title = 'Мои работы'
+    - var title = 'Обо мне'
+    - var page = 'about'
 
 block content
     .wrapper
