--- a/source/template/common/welcome.pug
+++ b/source/template/common/welcome.pug
@@ -1,4 +1,4 @@
-.welcome#welcome_block
+.welcome#welcomeBlock
     .welcome__main
         .user__avatar
             img.user__avatar-img(src="assets/img/welcome/avatar.jpg")
