--- a/source/template/common/header.pug
+++ b/source/template/common/header.pug
@@ -6,18 +6,25 @@
             i(class="fa fa-github-alt" aria-hidden="true")
         a(href='#')
             i(class="fa fa-linkedin-square" aria-hidden="true")
-    .nav.nav--main#navHeader
-        .nav__trigger#nav
+    .nav.nav--main#nav
+        .nav__trigger#navTrigger
             .nav__trigger-line
             .nav__trigger-line
             .nav__trigger-line
         .nav__drop#navOpen
             .nav__list
                 .nav__item
-                    a(href="works.html").nav__link.title 1
-                    a(href="works.html").nav__link.title 2
-                    a(href="works.html").nav__link.title 3
-                    a(href="works.html").nav__link.title 4
+                    a(href="works.html").nav__link.title-medium.title-dashes.title-dashes--white
+                        | Мои работы
+                .nav__item
+                    a(href="works.html").nav__link.title-medium.title-dashes.title-dashes--white
+                        | Обо мне
+                .nav__item
+                    a(href="works.html").nav__link.title-medium.title-dashes.title-dashes--white
+                        | Блог
+                .nav__item
+                    a(href="works.html").nav__link.title-medium.title-dashes.title-dashes--white
+                        | Авторизация
 
 .header__main
     .header__title
