--- a/source/style/app.pcss
+++ b/source/style/app.pcss
@@ -8,7 +8,15 @@
 @import 'common/header.pcss';
 @import 'common/footer.pcss';
 
-@import 'pages/start.pcss';
-@import 'pages/works.pcss';
-@import 'pages/about.pcss';
-@import 'pages/blog.pcss';
+@import 'pages/start/start.pcss';
+@import 'pages/start/authorization.pcss';
+
+@import 'pages/works/works.pcss';
+@import 'pages/works/slider.pcss';
+
+@import 'pages/about/about.pcss';
+@import 'pages/about/skills.pcss';
+@import 'pages/about/map.pcss';
+
+@import 'pages/blog/blog.pcss';
+@import 'pages/blog/menu.pcss';
