--- a/source/style/common/header.pcss
+++ b/source/style/common/header.pcss
@@ -32,6 +32,18 @@
   }
 }
 
+.header__triangle {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin-top: 50px;
+}
+
+.header__triangle-svg {
+  margin-bottom: -4px;
+}
+
 .nav {
   padding: 30px;
   float: right;
