--- a/source/style/app.pcss
+++ b/source/style/app.pcss
@@ -5,6 +5,7 @@
 @import "_misc/stylesheet.pcss";
 @import "_misc/blocks.pcss";
 
+@import 'common/titles.pcss';
 @import 'common/header.pcss';
 @import 'common/footer.pcss';
 
