--- a/source/template/common/authorization.pug
+++ b/source/template/common/authorization.pug
@@ -1,6 +1,6 @@
 .authorization.welcome__flipper--back#authBlock
     .authorization__main
-        .title-medium.title-dashes Авторизуйтесь
+        .title.title--auth.title-dashes Авторизуйтесь
 
         .authorization__item
             .authorization__icon
