--- a/source/template/common/header.pug
+++ b/source/template/common/header.pug
@@ -14,17 +14,17 @@
         .nav__drop#navOpen
             .nav__list
                 .nav__item
-                    a(href="works.html").nav__link.title-medium.title-dashes.title-dashes--white
+                    a(href="works.html").nav__link.title.title-dashes.title-dashes--white
                         | Мои работы
                 .nav__item
-                    a(href="works.html").nav__link.title-medium.title-dashes.title-dashes--white
+                    a(href="about.html").nav__link.title.title-dashes.title-dashes--white
                         | Обо мне
                 .nav__item
-                    a(href="works.html").nav__link.title-medium.title-dashes.title-dashes--white
+                    a(href="blog.html").nav__link.title.title-dashes.title-dashes--white
                         | Блог
                 .nav__item
-                    a(href="works.html").nav__link.title-medium.title-dashes.title-dashes--white
-                        | Авторизация
+                    a(href="index.html").nav__link.title.title-dashes.title-dashes--white
+                        | Главная
 
 .header__main
     .header__title
