--- a/source/style/_misc/blocks.pcss
+++ b/source/style/_misc/blocks.pcss
@@ -30,7 +30,7 @@
   color: #fff;
 
   @media (--mobile) {
-    font-size: 22px;
+    font-size: 21px;
   }
 }
 
@@ -85,6 +85,8 @@
   max-width: 50%;
   float: left;
   margin-left: 15px;
+  font-size: 24px;
+
 
   a {
     color: #fff;
@@ -99,8 +101,21 @@
     }
   }
 
+  @media (--mobile) {
+    padding: 8px 0 0;
+    margin-left: 8px;
+
+    a {
+      padding: 15px;
+    }
+  }
+
   @media (--tablet) {
     padding: 20px 0 0;
+
+    a {
+      padding: 15px;
+    }
   }
 }
 
