--- a/source/style/common/footer.pcss
+++ b/source/style/common/footer.pcss
@@ -30,6 +30,7 @@
 
   @media (--mobile) {
     border: none;
+    padding: 20px 10px;
   }
 }
 
@@ -43,6 +44,11 @@
   li {
     padding-right: 35px;
     display: inline-block;
+
+    @media (--mobile) {
+      padding: 0 5px;
+      font-size: 12px;
+    }
   }
 
   a {
