--- a/source/style/pages/about/about.pcss
+++ b/source/style/pages/about/about.pcss
@@ -1,9 +1,10 @@
 .about {
-  /*display: flex;*/
+  display: flex;
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
 
-  @media (--display-medium) {
+  @media (--tablet) {
+    display: block;
     height: auto;
   }
 
@@ -73,6 +74,11 @@
   width: 90%;
   max-width: 440px;
   margin: 30px auto;
+
+  @media (--mobile) {
+    width: 100%;
+    margin: 20px auto;
+  }
 }
 
 .about__text {
@@ -80,6 +86,10 @@
   text-align: left;
   line-height: 1.5;
   margin: 30px auto;
+
+  @media (--mobile) {
+    margin: 20px auto;
+  }
 }
 
 
