--- a/source/style/pages/about/map.pcss
+++ b/source/style/pages/about/map.pcss
@@ -2,6 +2,10 @@
   position: relative;
   width: 100%;
   height: 100vh;
+
+  @media (--mobile) {
+    height: 150vh;
+  }
 }
 
 .map__api {
@@ -22,6 +26,13 @@
   left: 50%;
   text-align: center;
   transform: translate(-50%, -80%);
+
+  @media (--mobile) {
+    top: 0;
+    left: 0;
+    width: 100%;
+    transform: none;
+  }
 }
 
 .map__contact-list {
