--- a/source/style/pages/works/works.pcss
+++ b/source/style/pages/works/works.pcss
@@ -10,14 +10,23 @@
   padding: 26px;
   background: url("../img/works/bg.jpg") bottom;
   background-size: cover;
+
+  @media (--mobile) {
+    padding: 10px;
+  }
 }
 
 .about-talk__comment {
+  display: flex;
   width: 800px;
   margin: 20px auto 40px;
 
   @media (--tablet) {
     width: auto;
+  }
+
+  @media (--mobile) {
+    display: block;
   }
 }
 
@@ -88,16 +97,28 @@
   overflow: hidden;
   transition: .5s;
 
+  @media (--tablet) {
+    width: 340px;
+  }
+
   @media (--mobile) {
     width: 300px;
     margin: auto auto 100px;
   }
 }
 
+.about-talk__form {
+  margin-top: 20px;
+
+  @media (--tablet) {
+    margin-top: 0;
+  }
+}
+
 .contact-input, .contact-textarea {
   box-sizing: border-box;
-  width: 300px;
-  min-height: 40px;
+  width: 340px;
+  min-height: 45px;
   border-color: transparent;
   border-radius: 5px;
   background-color: #ffffff;
@@ -106,6 +127,11 @@
 
   &::-webkit-input-placeholder {
     color: rgba(55, 62, 66, 0.5);
+  }
+
+  @media (--tablet) {
+    width: 300px;
+    min-height: 40px;
   }
 
   @media (--mobile) {
