--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -18,14 +18,14 @@ block content
         .works
             .works__title
                 .big__title
-                    .title-dashes__bg
+                    .title-dashes__bg.title-dashes__bg--works
                         include ../../icons/works_header.svg
                     .title-dashes.title--bg Мои работы
 
             #slider.slider
                 .slider__content
                     #content.slider__content-main
-                        .title-medium.title-dashes Сайт школы онлайн Образования
+                        .title.title--slider.title-dashes Сайт школы онлайн Образования
                         .slider__content-technologies HTML, CSS, JAVASCRIPT
                         a(href='#').btn-website-link
                             button.btn-website
@@ -49,37 +49,39 @@ block content
                         img.slider__button-img.slider__button-img--up(src='assets/slider/img/work-4.png', alt='')
         .about-talk
             .big__title
-                .title-dashes__bg
+                .title-dashes__bg.title-dashes__bg--about-me
                     include ../../icons/about_header.svg
                 .title-dashes.title--bg.title-dashes--double Что обо мне говорят
 
             .about-talk__comment
                 .about-talk__comment-block
-                    .about-talk__comment-text.
-                        Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний!
-                    .about-talk__comment-author
-                        .user__avatar.user__avatar--comment
-                            img.user__avatar-img(src="assets/img/works/dima.png")
-                        .about-talk__comment-name
-                            .about-talk__comment-fio Ковальчук Дмитрий
-                            .about-talk__comment-description основатель Loftschool
+                    .about-talk__comment-content
+                        .about-talk__comment-text.
+                            Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний!
+                        .about-talk__comment-author
+                            .user__avatar.user__avatar--comment
+                                img.user__avatar-img(src="assets/img/works/dima.png")
+                            .about-talk__comment-name
+                                .about-talk__comment-fio Ковальчук Дмитрий
+                                .about-talk__comment-description основатель Loftschool
 
                 .about-talk__comment-block
-                    .about-talk__comment-text.
-                        Этот код выдержет любые испытания. Только пожалуйста, не загружается сайт на слишком старых браузерах!
-                    .about-talk__comment-author
-                        .user__avatar.user__avatar--comment
-                            img.user__avatar-img(src="assets/img/works/zar.png")
-                        .about-talk__comment-name
-                            .about-talk__comment-fio Зар Захаров
-                            .about-talk__comment-description преподаватель
+                    .about-talk__comment-content
+                        .about-talk__comment-text.
+                            Этот код выдержет любые испытания. Только пожалуйста, не загружается сайт на слишком старых браузерах!
+                        .about-talk__comment-author
+                            .user__avatar.user__avatar--comment
+                                img.user__avatar-img(src="assets/img/works/zar.png")
+                            .about-talk__comment-name
+                                .about-talk__comment-fio Зар Захаров
+                                .about-talk__comment-description преподаватель
 
             .about-talk__contact
-                .title-medium.title-dashes Связаться со мной
-                form
+                .title.title-dashes Связаться со мной
+                form.about-talk__form
                     input(type="text" placeholder="Имя").contact-input
                     input(type="text" placeholder="Email").contact-input
-                    textarea(rows="4" placeholder="Ваше сообщение").contact-textarea
+                    textarea(rows="7" placeholder="Ваше сообщение").contact-textarea
                 .start__btns
                     a(href='#').start__btn Отправить
                     a(href='#').start__btn Очистить
