--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -51,7 +51,7 @@ block content
                         include ../../icons/arrow_down.svg
 
         section.blog#blog
-            aside.blog__aside
+            aside.blog__menu#blogMenu
                 ul.menu
                     li.menu__item.menu__item--active
                         a(href="#").menu__link Самое важное в SASS
@@ -62,7 +62,7 @@ block content
                     li.menu__item
                         a(href="#").menu__link Что такое FlexBox
 
-            .blog__content
+            .blog__content#blogContent
                 article.article
                     .title-medium Самое важное в SASS
                     .article__data 22 ноября 2016
