--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -52,25 +52,26 @@ block content
 
         section.blog#blog
             aside.blog__menu#blogMenu
-                ul.menu
+                ul.menu#menuList
                     li.menu__item.menu__item--active
-                        a(href="#").menu__link Самое важное в SASS
+                        a(href="#article-1").menu__link Самое важное в SASS
                     li.menu__item
-                        a(href="#").menu__link Приёмы в вёрстке, без которых не обходится ни один сайт
+                        a(href="#article-2").menu__link Приёмы в вёрстке, без которых не обходится ни один сайт
                     li.menu__item
                         a(href="#").menu__link Все что нужно зать о Gulp
                     li.menu__item
                         a(href="#").menu__link Что такое FlexBox
+                .blog__menu-trigger
 
             .blog__content#blogContent
-                article.article
+                article.article#article-1
                     .title-medium Самое важное в SASS
                     .article__data 22 ноября 2016
                     .article__content
                         p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия
                         p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
 
-                article.article
+                article.article#article-2
                     .title-medium Самое важное в SASS
                     .article__data 22 ноября 2016
                     .article__content
