--- a/source/style/pages/blog/menu.pcss
+++ b/source/style/pages/blog/menu.pcss
@@ -1,3 +1,54 @@
+.blog__menu {
+  position: relative;
+  width: 300px;
+  margin-right: 40px;
+  margin-top: 10px;
+  float: left;
+  text-align: right;
+
+  @media (--tablet) {
+    position: fixed;
+    z-index: 50;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    margin-left: -300px;
+    margin-top: 0;
+    background: #00BFA5;
+    color: #fff;
+    -webkit-transition: margin-left .5s,
+    box-shaadow .5s;
+    transition: margin-left .5s,
+    box-shaadow .5s;
+  }
+}
+
+.blog__menu--fix {
+  display: block;
+  position: fixed;
+  top: 10px;
+  left: 0;
+  width: 300px;
+}
+
+.blog__menu-trigger {
+  display: none;
+  position: absolute;
+  left: 100%;
+  top: 0;
+  bottom: 0;
+  width: 9px;
+  height: 40px;
+  margin: auto;
+  border-radius: 0 100% 100% 0 / 50%;
+  background: #00BFA5;
+  cursor: pointer;
+
+  @media (--tablet) {
+    display: block;
+  }
+}
+
 .menu {
   display: inline-block;
   max-width: 300px;
@@ -10,6 +61,19 @@
 .menu__item {
   margin-bottom: 20px;
   border-right: 3px solid transparent;
+
+  &:hover {
+    color: rgba(0, 191, 165, 0.7);
+  }
+
+  @media (--tablet) {
+    color: rgba(255, 255, 255, 0.7);
+
+    &:hover {
+      color: rgba(255, 255, 255, 1);
+    }
+  }
+
 }
 
 .menu__item--active {
