menu blog finish

--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -58,9 +58,9 @@ block content
                     li.menu__item
                         a(href="#article-2").menu__link Приёмы в вёрстке, без которых не обходится ни один сайт
                     li.menu__item
-                        a(href="#").menu__link Все что нужно зать о Gulp
+                        a(href="#article-3").menu__link Все что нужно зать о Gulp
                     li.menu__item
-                        a(href="#").menu__link Что такое FlexBox
+                        a(href="#article-4").menu__link Что такое FlexBox
                 .blog__menu-trigger
 
             .blog__content#blogContent
@@ -77,6 +77,19 @@ block content
                     .article__content
                         p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия
                         p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
+
+                article.article#article-3
+                    .title-medium Самое важное в SASS
+                    .article__data 22 ноября 2016
+                    .article__content
+                        p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия
+                        p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
+
+                article.article#article-4
+                    .title-medium Самое важное в SASS
+                    .article__data 22 ноября 2016
+                    .article__content
+                        p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия
 
         include ../common/footer
 
